--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "chart.js": "^4.4.1",
     "jwt-decode": "^4.0.0",
     "ngx-toastr": "^17.0.2",
     "qrcode": "^1.5.3",
